<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    tools:context="com.tavares.kaique.consultapersonagens.ResultadoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabelo"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tvCabelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pele"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tvPele"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aniversario"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tvAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tvGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/btnVoltar"
            style="@style/ButtonsAPP"
            android:layout_marginTop="32dp"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="Voltar"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/btnSobre"
            style="@style/ButtonsAPP"
            android:layout_marginTop="32dp"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="Sobre"
            android:layout_weight="0.5"/>

    </LinearLayout>
</LinearLayout>
